[package]
name = "excavate"
version = "0.2.0"
edition = "2021"
description = "A command line tool to excavate fields from multi-column texts."
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
nom = "7.1.2"
